--- a/CustomClassifier/index.html
+++ b/CustomClassifier/index.html
@@ -5,12 +5,18 @@
     <script src="https://unpkg.com/@tensorflow-models/mobilenet"></script>
   </head>
   <body>
-    <div id="console"></div>
-    <!-- Add an image that we will use to test -->
-    <img id="img" crossOrigin src="https://i.imgur.com/JlUvsxa.jpg" width=227 height=227/>
+    <div id="img-box">
 
-    <button id="analyze">Analyze</button>
+      <!-- Add an image that we will use to test -->
+      <img id="img" crossOrigin src="https://i.imgur.com/JlUvsxa.jpg" width=227 height=227/>
 
+    </div>
+    <div id="analyze-and-result">
+
+      <button id="analyze">Analyze</button>
+      <div id="result"></div>
+      
+    </div>
     <!-- Load index.js after the content of the page -->
     <script src="index.js"></script>
   </body>
