--- a/CustomClassifier/index.html
+++ b/CustomClassifier/index.html
@@ -5,11 +5,14 @@
     <script src="https://unpkg.com/@tensorflow-models/mobilenet"></script>
   </head>
   <body>
+
     <div id="img-box">
-
       <!-- Add an image that we will use to test -->
-      <img id="img" crossOrigin src="https://i.imgur.com/JlUvsxa.jpg" width=227 height=227/>
-
+      <img id="img" width=227 height=227/>
+      <div id="img-input-box">
+        <label id="img-input-label" for="img-input">Choose a picture</label>
+        <input type="file" id="img-input" name="img-input" accept="image/jpg" onchange="loadFile(event)">
+      </div>
     </div>
     <div id="analyze-and-result">
 
